<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".SignInActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.Guideline
            android:id="@+id/guideline_05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".05" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_95"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".95" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_center_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".50" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_center_layout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".43" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:cardBackgroundColor="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@+id/guideline_center_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.constraint.Guideline
                    android:id="@+id/guideline_icon_horizontal_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent=".10" />

                <android.support.constraint.Guideline
                    android:id="@+id/guideline_icon_horizontal_30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent=".30" />

                <android.support.constraint.Guideline
                    android:id="@+id/guideline_icon_horizontal_60"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent=".60" />

                <android.support.constraint.Guideline
                    android:id="@+id/guideline_icon_horizontal_80"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent=".80" />

                <android.support.constraint.Guideline
                    android:id="@+id/guideline_vertical_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent=".10" />


                <android.support.constraint.Guideline
                    android:id="@+id/guideline_vertical_90"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent=".90" />


                <android.support.constraint.Guideline
                    android:id="@+id/guideline_vertical_70"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent=".70" />

                <android.support.constraint.Guideline
                    android:id="@+id/guideline_vertical_30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent=".30" />

                <android.support.constraint.Guideline
                    android:id="@+id/guideline_vertical_80"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent=".80" />

                <android.support.constraint.Guideline
                    android:id="@+id/guideline_vertical_60"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent=".60" />


                <android.support.constraint.Guideline
                    android:id="@+id/guideline_vertical_20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent=".20" />

                <android.support.constraint.Guideline
                    android:id="@+id/guideline_vertical_35"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent=".35" />

                <android.support.constraint.Guideline
                    android:id="@+id/guideline_vertical_65"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent=".65" />

                <android.support.constraint.Guideline
                    android:id="@+id/guideline_vertical_40"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent=".40" />

                <ImageView
                    android:id="@+id/ic_computer_signin"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/ic_computer_signin"
                    app:layout_constraintBottom_toTopOf="@+id/guideline_icon_horizontal_30"
                    app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_30"
                    app:layout_constraintStart_toStartOf="@+id/guideline_vertical_10"
                    app:layout_constraintTop_toTopOf="@+id/guideline_icon_horizontal_10"
                    app:srcCompat="@drawable/ic_computer_signin" />

                <ImageView
                    android:id="@+id/ic_mechanical_signin"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/ic_electrical_signin"
                    app:layout_constraintBottom_toTopOf="@+id/guideline_icon_horizontal_30"
                    app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_80"
                    app:layout_constraintStart_toStartOf="@+id/guideline_vertical_60"
                    app:layout_constraintTop_toTopOf="@+id/guideline_icon_horizontal_10"
                    app:srcCompat="@drawable/ic_mechanical_signin" />

                <ImageView
                    android:id="@+id/ic_signin"
                    android:layout_width="116dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/ic_student_signin"
                    android:onClick="changesigninlogo"
                    app:layout_constraintBottom_toTopOf="@+id/guideline_icon_horizontal_60"
                    app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_65"
                    app:layout_constraintStart_toStartOf="@+id/guideline_vertical_35"
                    app:layout_constraintTop_toTopOf="@+id/guideline_icon_horizontal_30"
                    app:srcCompat="@drawable/ic_student" />

                <TextView
                    android:id="@+id/txt_signin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/txt_student_signin"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ic_signin" />

                <ImageView
                    android:id="@+id/ic_electrical_signin"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/ic_mechanical_signin"
                    app:layout_constraintBottom_toTopOf="@+id/guideline_icon_horizontal_80"
                    app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_40"
                    app:layout_constraintStart_toStartOf="@+id/guideline_vertical_20"
                    app:layout_constraintTop_toTopOf="@+id/guideline_icon_horizontal_60"
                    app:srcCompat="@drawable/ic_electrical_signin" />

                <ImageView
                    android:id="@+id/ic_civil_signin"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/ic_civil_signin"
                    app:layout_constraintBottom_toTopOf="@+id/guideline_icon_horizontal_80"
                    app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_90"
                    app:layout_constraintStart_toStartOf="@+id/guideline_vertical_70"
                    app:layout_constraintTop_toTopOf="@+id/guideline_icon_horizontal_60"
                    app:srcCompat="@drawable/ic_civil_signin" />

            </android.support.constraint.ConstraintLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/background_light"
            app:cardCornerRadius="14dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_95"
            app:layout_constraintStart_toStartOf="@+id/guideline_05"
            app:layout_constraintTop_toTopOf="@+id/guideline_center_layout2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/tb_username_signin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimary"
                        android:drawableStart="@drawable/ic_username_logo"
                        android:drawablePadding="5dp"
                        android:ems="10"
                        android:hint="@string/tb_username_signin"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:textColor="@color/gray" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginEnd="15dp"
                    app:passwordToggleEnabled="true">


                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/tb_password_signin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimary"
                        android:drawableStart="@drawable/ic_password_logo"
                        android:drawablePadding="5dp"
                        android:ems="10"
                        android:hint="@string/tb_password_signin"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="@color/gray" />

                </android.support.design.widget.TextInputLayout>

                <Button

                    android:id="@+id/btn_signin"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_rounded"
                    android:enabled="false"
                    android:onClick="signIn"
                    android:text="@string/btn_signin"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline_95"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline_05"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintVertical_bias="0.0">

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toTopOf="parent">

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/txt_or"
                    android:background="@color/colorPrimary" />

                <TextView
                    android:id="@+id/txt_or"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/txt_or"
                    android:textColor="@color/gray"
                    android:textSize="14sp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/txt_or"
                    android:background="@color/colorPrimary" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="15dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:background="@drawable/button_rounded"
                android:onClick="signUp"
                android:text="@string/btn_signup"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
                tools:layout_editor_absoluteX="14dp" />

        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>